# django-social-oauth-token

./: .flake8  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
social_oauth_token/: apps.py  urls.py  views.py
tests/: settings.py  test_views.py  urls.py
